--- a/slide.tex
+++ b/slide.tex
@@ -31,7 +31,7 @@
 		\item 这是北京化工大学的非官方 Beamer 模板，魔改自 \href{https://www.overleaf.com/latex/templates/thu-beamer-theme/vwnqmzndvwyb}{THU Beamer Theme}。
 		\item 中文支持请选择 \XeLaTeX 编译选项，\emph{不支持 CTeX 套装}。
 		\item 本文档即为示例文件，推荐结合源代码看一看。
-		\item 项目地址位于 项目地址位于 \href{https://github.com/Miracle0565/buct-Beamer-Theme}{GitHub}，欢迎反馈。
+		\item 项目地址位于 \href{https://github.com/Miracle0565/buct-Beamer-Theme}{GitHub}，欢迎反馈。
 	\end{itemize}
 \end{frame}
 
