--- a/Buct.sty
+++ b/Buct.sty
@@ -1,20 +1,20 @@
 \mode<presentation>
 
 \usepackage{%
-	amsmath,
+    amsmath,
     physics,
     tensor,
-	xcolor,
-	multicol,
-	booktabs,
-	tikz,
-	unicode-math,
-	graphicx,
+    xcolor,
+    multicol,
+    booktabs,
+    tikz,
+    unicode-math,
+    graphicx,
     caption,
-	pstricks,
-	listings,
-	bxtexlogo,
-	hyperref,
+    pstricks,
+    listings,
+    bxtexlogo,
+    hyperref,
 }
 
 \newif\ifbeamer@secheader
@@ -146,6 +146,7 @@
 }{}
 
 \renewcommand{\emph}{\textbf}
+\renewcommand{\em}{\bfseries}
 
 % defs
 \def\cmd#1{\texttt{\color{red}\footnotesize \textbackslash#1}}
