--- a/slide.tex
+++ b/slide.tex
@@ -54,8 +54,8 @@
 \subsection{字体}
 \begin{frame}
 	\begin{enumerate}
-		\item 中文字体：优先使用思源黑体\footnote{下载：\href{https://mirrors.tuna.tsinghua.edu.cn/adobe-fonts/source-han-sans/SubsetOTF/CN/}{清华大学镜像站} 或者 \href{https://mirror.nju.edu.cn/adobe-fonts/source-han-sans/SubsetOTF/CN/}{南京大学镜像站}}，如果不存在将使用默认设置。本模板使用 Regular 和 Bold 两种字重。
-		\item 英文字体：使用 Fira 系列字体，其已集成于 TeX Live 中，故无需自行设置。
+		\item 中文字体：优先使用思源黑体\footnote{下载：\href{https://mirrors.tuna.tsinghua.edu.cn/adobe-fonts/source-han-sans/OTF/SimplifiedChinese/}{清华大学镜像站} 或者 \href{https://mirror.nju.edu.cn/adobe-fonts/source-han-sans/OTF/SimplifiedChinese/}{南京大学镜像站}}，如果不存在将使用默认设置。本模板使用 Regular 和 Bold 两种字重。
+		\item 英文字体：使用 Fira 系列字体，其已集成于 TeX Live 中，故无需另行下载。
 	\end{enumerate}
 \end{frame}
 
